First semblance of being able to actually see a play button

--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -99,7 +99,7 @@
       <center>
         <Pane id="MidPane" prefHeight="200.0" prefWidth="200.0">
           <children>
-            <VBox id="MidHolder" blendMode="MULTIPLY" layoutY="-14.0" prefHeight="490.0" prefWidth="798.0">
+            <VBox id="MidHolder" blendMode="MULTIPLY" layoutY="-14.0" prefHeight="500.0" prefWidth="798.0">
               <children>
                 <Pane id="StaffFrame" prefHeight="316.0" prefWidth="798.0">
                   <children>
@@ -683,7 +683,7 @@
                 </Pane>
                 <Pane id="VolPaneHolder" prefHeight="64.0" prefWidth="798.0">
                   <children>
-                    <AnchorPane id="AnchorPane" layoutX="3.0">
+                    <AnchorPane id="AnchorPane" layoutX="3.0" layoutY="-4.0">
                       <children>
                         <Rectangle id="VolRect" arcHeight="5.0" arcWidth="5.0" blendMode="SRC_OVER" fill="$x1" height="64.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="792.0" y="-3.0" />
                         <ImageView fitHeight="24.0" fitWidth="72.0" layoutX="14.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
@@ -691,25 +691,16 @@
                             <Image url="@sprites/VOL_LABEL.PNG" preserveRatio="false" smooth="false" />
                           </image>
                         </ImageView>
+                        <HBox prefHeight="64.0" prefWidth="792.0" />
                       </children>
                     </AnchorPane>
                   </children>
                 </Pane>
                 <Pane id="ControlsPane" prefHeight="121.0" prefWidth="798.0">
                   <children>
-                    <Rectangle id="ControlsRect" arcHeight="5.0" arcWidth="5.0" blendMode="SRC_OVER" fill="$x1" height="120.0" layoutX="3.0" layoutY="-5.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="792.0" />
+                    <Rectangle id="ControlsRect" arcHeight="5.0" arcWidth="5.0" blendMode="SRC_OVER" fill="$x1" height="120.0" layoutX="3.0" layoutY="-9.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="792.0" />
                     <StackPane id="controls" layoutX="14.0" layoutY="7.0">
                       <children>
-                        <HBox fx:id="controls" prefHeight="76.0" prefWidth="474.0">
-                          <children>
-                            <HBox prefHeight="100.0" prefWidth="200.0" />
-                            <HBox prefHeight="100.0" prefWidth="200.0" />
-                            <HBox prefHeight="100.0" prefWidth="200.0" />
-                          </children>
-                          <padding>
-                            <Insets left="8.0" right="8.0" />
-                          </padding>
-                        </HBox>
                         <HBox id="ControlsHolder" prefHeight="76.0" prefWidth="474.0">
                           <children>
                             <ImageView id="ConrolsLeft" fitHeight="80.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
@@ -731,6 +722,16 @@
                               </image>
                             </ImageView>
                           </children>
+                        </HBox>
+                        <HBox fx:id="controls" prefHeight="76.0" prefWidth="474.0">
+                          <children>
+                            <HBox prefHeight="100.0" prefWidth="200.0" />
+                            <HBox prefHeight="100.0" prefWidth="200.0" />
+                            <HBox prefHeight="100.0" prefWidth="200.0" />
+                          </children>
+                          <padding>
+                            <Insets left="8.0" right="8.0" />
+                          </padding>
                         </HBox>
                       </children>
                     </StackPane>
